通过修改相同版本的pro guard可以使用mul dex 打包
首先需要下载pro guard 的源码 然后使用 ant 编译生成 jar
然后 将jar放入工程。通过flatDir { dirs 'proguard' } 加入 buildscript 的
repositories，并且 加入对应相同版本的
        classpath 'proguard.io:proguard:5.2.1’，注意，sdk里面的 proguard
的版本要和这个对应。然后就行了。不然会因为混淆导致声称的包又问题

--- a/build.gradle
+++ b/build.gradle
@@ -4,9 +4,11 @@ apply plugin: 'com.android.application'
 buildscript {
     repositories {
         jcenter()
+        flatDir { dirs 'proguard' }
 //        maven { url 'http://download.crashlytics.com/maven' }
     }
     dependencies {
+        classpath 'proguard.io:proguard:5.2.1'
         classpath 'com.android.tools.build:gradle:2.0.0-beta5'
         classpath 'com.neenbedankt.gradle.plugins:android-apt:1.4'
     }
